--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <title>React App</title>
     </head>
 
