--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,6 @@
 
     <body>
         <div id="root"></div>
-        <pre id="object">
-            
-        </pre>
-    </body>  
+    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
